# Chess

./: CMakeLists.txt  Chess.sln  README.md
Chess/: Chess.vcxproj  Chess.vcxproj.filters  SDL_common.hpp  SDLgraphics.cpp  SDLgraphics.hpp  game.cpp  game.hpp  main.cpp  pieces.cpp  pieces.hpp
include/: SDL_common.hpp  SDLgraphics.hpp  game.hpp  pieces.hpp
src/: SDLgraphics.cpp  game.cpp  main.cpp  pieces.cpp
